<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cs683.danhoui.myclassproject.GoodNight">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/night_button"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="129dp"
        android:onClick="finalSelection"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brush_teeth"
        android:id="@+id/brush_teeth"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="37dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="52dp"
        android:checked="false"
        android:onClick="selectItem"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pajamas"
        android:id="@+id/pajamas"
        android:layout_below="@+id/brush_teeth"
        android:layout_alignLeft="@+id/brush_teeth"
        android:layout_alignStart="@+id/brush_teeth"
        android:checked="false"
        android:onClick="selectItem"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/story_time"
        android:id="@+id/story_time"
        android:layout_below="@+id/pajamas"
        android:layout_alignLeft="@+id/pajamas"
        android:layout_alignStart="@+id/pajamas"
        android:checked="false"
        android:onClick="selectItem"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/final_result"
        android:layout_below="@+id/story_time"
        android:layout_toLeftOf="@+id/button"
        android:layout_toStartOf="@+id/button"
        android:layout_marginTop="51dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Activity_title"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/brush_teeth"
        android:layout_alignStart="@+id/brush_teeth" />




</RelativeLayout>
